--- a/todo/app/app.component.html
+++ b/todo/app/app.component.html
@@ -1,1 +1,5 @@
+<!--These are reusable pieces/components-->
+<!--Mostly in HTML but can use angular data binding with {{}} syntax-->
+
+
 <h3 class="bg-primary p-3">{{getName()}}'s To Do List</h3>
