added more documentation to the different pieces

--- a/todo/app/app.component.html
+++ b/todo/app/app.component.html
@@ -1,5 +1,7 @@
+<!--TEMPLATE-->
 <!--These are reusable pieces/components-->
-<!--Mostly in HTML but can use angular data binding with {{}} syntax-->
+<!--Mostly in HTML but can use angular data binding
+with {{}} syntax-->
 
 
 <h3 class="bg-primary p-3">{{getName()}}'s To Do List</h3>
